--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -18,7 +18,7 @@
     <link rel="canonical" href="http://localhost:8000/chi-siamo.html">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -125,15 +125,7 @@
                     </p>
                 </div>
                 <div class="service-image">
-                    <div class="image-placeholder">
-                        <svg class="placeholder-svg" viewBox="0 0 400 300" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="400" height="300" fill="#1a1a1a" stroke="#4caf50" stroke-width="2"/>
-                            <circle cx="200" cy="120" r="40" stroke="#4caf50" stroke-width="3" fill="none"/>
-                            <path d="M180 110L190 120L220 90" stroke="#4caf50" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                            <rect x="150" y="180" width="100" height="60" stroke="#4caf50" stroke-width="2" fill="none"/>
-                            <text x="200" y="270" text-anchor="middle" fill="#4caf50" font-size="16" font-family="Inter">FB Total Security</text>
-                        </svg>
-                    </div>
+                    <img src="icons/placeholder1-chisiamo.webp" alt="La nostra storia" class="service-image" style="width: 100%; height: auto;">
                 </div>
             </div>
         </div>
@@ -265,15 +257,6 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56-.35-.12-.74-.03-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/>
-                            </svg>
-                            <div>
-                                <h4 data-translate="contact-phone-title">Telefono</h4>
-                                <p><a href="tel:+393331234567">+39 333 123 4567</a></p>
-                            </div>
-                        </div>
-                        <div class="contact-item">
-                            <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                             </svg>
                             <div>
@@ -301,9 +284,7 @@
                         <div class="form-group">
                             <input type="email" id="email" name="email" data-translate-placeholder="form-email-placeholder" placeholder="Email" required>
                         </div>
-                        <div class="form-group">
-                            <input type="tel" id="telefono" name="telefono" data-translate-placeholder="form-phone-placeholder" placeholder="Telefono">
-                        </div>
+
                         <div class="form-group">
                             <select id="servizio" name="servizio">
                                 <option value="" data-translate="form-service-default">Seleziona il servizio di interesse</option>
@@ -353,7 +334,7 @@
                 <div class="footer-section">
                     <h4 data-translate="footer-contacts-title">Contatti</h4>
                     <ul>
-                        <li><a href="tel:+393331234567">+39 333 123 4567</a></li>
+
                         <li><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></li>
                         <li data-translate="footer-service-area">Milano e provincia e Monza e Brianza e provincia</li>
                     </ul>
