--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <link rel="alternate" hreflang="it" href="http://localhost:8000/?lang=it">
     <link rel="alternate" hreflang="en" href="http://localhost:8000/?lang=en">
     <link rel="alternate" hreflang="x-default" href="http://localhost:8000/">
+    <!-- Cache buster: 2025-01-17 -->
+    <meta name="cache-control" content="no-cache, no-store, must-revalidate">
+    <meta name="pragma" content="no-cache">
+    <meta name="expires" content="0">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
