--- a/allarmi.html
+++ b/allarmi.html
@@ -585,7 +585,6 @@
                     </ul>
                     <div class="service-cta">
                         <a href="#contatti" class="btn btn-primary" data-translate="allarmi-installation-cta1">Prenota Sopralluogo</a>
-                        <a href="#contatti" class="btn btn-secondary" data-translate="allarmi-installation-cta2">Richiedi Preventivo</a>
                     </div>
                 </div>
                 <div class="service-image">
@@ -645,12 +644,12 @@
                     <form>
                         <div class="form-group">
                             <label for="nome" data-translate="form-name">Nome e Cognome</label>
-                            <input type="text" id="nome" name="nome" required>
+                            <input type="text" id="nome" name="nome" autocomplete="name" required>
                         </div>
                         
                         <div class="form-group">
                             <label for="email" data-translate="form-email">Email</label>
-                            <input type="email" id="email" name="email" required>
+                            <input type="email" id="email" name="email" autocomplete="email" required>
                         </div>
                         
 
