--- a/index.html
+++ b/index.html
@@ -347,7 +347,6 @@
                         </ul>
                         <div class="service-cta">
                             <a href="#contatti" class="btn btn-primary" data-translate="btn-quote">Richiedi Preventivo</a>
-                            <a href="tel:+393331234567" class="btn btn-outline" data-translate="btn-call">Chiama Ora</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -421,7 +420,6 @@
                         </ul>
                         <div class="service-cta">
                             <a href="#contatti" class="btn btn-primary" data-translate="btn-quote">Richiedi Preventivo</a>
-                            <a href="tel:+393331234567" class="btn btn-outline" data-translate="btn-call">Chiama Ora</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -448,7 +446,6 @@
                         </ul>
                         <div class="service-cta">
                             <a href="#contatti" class="btn btn-primary" data-translate="btn-quote">Richiedi Preventivo</a>
-                            <a href="tel:+393331234567" class="btn btn-outline" data-translate="btn-call">Chiama Ora</a>
                         </div>
                     </div>
                     <div class="service-image">
@@ -573,13 +570,13 @@
                     <form class="contact-form">
                         <h3 data-translate="form-title">Richiedi Informazioni</h3>
                         <div class="form-group">
-                            <input type="text" id="nome" name="nome" data-translate-placeholder="form-name-placeholder" placeholder="Nome e Cognome" required>
+                            <input type="text" id="nome" name="nome" autocomplete="name" data-translate-placeholder="form-name-placeholder" placeholder="Nome e Cognome" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" id="email" name="email" data-translate-placeholder="form-email-placeholder" placeholder="Email" required>
+                            <input type="email" id="email" name="email" autocomplete="email" data-translate-placeholder="form-email-placeholder" placeholder="Email" required>
                         </div>
                         <div class="form-group">
-                            <input type="tel" id="telefono" name="telefono" data-translate-placeholder="form-phone-placeholder" placeholder="Telefono">
+                            <input type="tel" id="telefono" name="telefono" autocomplete="tel" data-translate-placeholder="form-phone-placeholder" placeholder="Telefono">
                         </div>
                         <div class="form-group">
                             <select id="servizio" name="servizio" required>
