--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -448,11 +448,11 @@
                     <h3 data-translate="form-title">Richiedi Informazioni</h3>
                     <form>
                         <div class="form-group">
-                            <input type="text" id="nome" name="nome" data-translate-placeholder="form-name-placeholder" placeholder="Nome e Cognome" required>
+                            <input type="text" id="nome" name="nome" autocomplete="name" data-translate-placeholder="form-name-placeholder" placeholder="Nome e Cognome" required>
                         </div>
                         
                         <div class="form-group">
-                            <input type="email" id="email" name="email" data-translate-placeholder="form-email-placeholder" placeholder="Email" required>
+                            <input type="email" id="email" name="email" autocomplete="email" data-translate-placeholder="form-email-placeholder" placeholder="Email" required>
                         </div>
                         
 
