Fix: Aggiungi attributo data-translate al titolo hero per risolvere problema caps lock su GitHub Pages

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <main>
         <section class="hero">
             <div class="hero-container">
-                <h1 class="hero-title">Sicurezza Professionale a 360°</h1>
+                <h1 class="hero-title" data-translate="hero-title">Sicurezza Professionale a 360°</h1>
                 <p class="hero-subtitle" data-translate="hero-subtitle">Anni di esperienza multisettoriale nella protezione di abitazioni e aziende per soddisfare le tue esigenze. Sistemi certificati, installazioni garantite, soluzioni personalizzate.</p>
                 <div class="hero-cta">
                     <a href="#contatti" class="btn btn-primary" data-translate="hero-cta-primary">Richiedi Consulenza Gratuita</a>
