Fix: Correggi testi in maiuscolo negli elenchi puntati delle sezioni di sicurezza
- Converti tutti i testi in maiuscolo in formato normale con capitalizzazione appropriata
- Aggiorna sezioni nebbiogeni, serramenti e sorveglianza in index.html
- Correggi traduzioni corrispondenti in script.js (24H/365 -> 24h/365, H24 -> h24)
- Risolve il problema di caps lock nella homepage su GitHub Pages

--- a/index.html
+++ b/index.html
@@ -257,19 +257,19 @@
                         <h3 data-translate="nebbiogeni-section-title">Sistemi Nebbiogeni Professionali</h3>
                         <p class="service-description" data-translate="nebbiogeni-section-desc">I nebbiogeni rappresentano la frontiera più avanzata nella protezione antifurto. Questi sistemi rilasciano istantaneamente una densa nebbia atossica che riduce la visibilità a zero, costringendo i malintenzionati ad abbandonare immediatamente i locali.</p>
                         <ul class="service-features">
-                            <li data-translate="nebbiogeni-feature-1">NEBBIOGENO ANTINTRUSIONE certificato EN 50131-8:2019</li>
-                            <li data-translate="nebbiogeni-feature-2">AVVIO RAPIDO (erogazione nebbia in pochi secondi)</li>
-                            <li data-translate="nebbiogeni-feature-3">PROTEZIONE VOLUMETRICA</li>
-                            <li data-translate="nebbiogeni-feature-4">FLUIDO ATOSSICO e INNOCUO (certificato e senza residui)</li>
-                            <li data-translate="nebbiogeni-feature-5">SISTEMI ANTIMANOMISSIONE</li>
-                            <li data-translate="nebbiogeni-feature-6">COLLEGABILE A SISTEMI DI ALLARME</li>
-                            <li data-translate="nebbiogeni-feature-7">APP DEDICATA PER GESTIONE DA REMOTO</li>
-                            <li data-translate="nebbiogeni-feature-8">BATTERIA BACKUP</li>
-                            <li data-translate="nebbiogeni-feature-9">MODULABILE per piccoli/grandi ambienti</li>
-                            <li data-translate="nebbiogeni-feature-10">UGELLI ORIENTABILI</li>
-                            <li data-translate="nebbiogeni-feature-11">INSTALLAZIONE SEMPLIFICATA</li>
-                            <li data-translate="nebbiogeni-feature-12">TECNOLOGIA BREVETTATA (caldaia layer, pompa Fog Storm)</li>
-                            <li data-translate="nebbiogeni-feature-13">SUPPORTO PRE E POST-VENDITA</li>
+                            <li data-translate="nebbiogeni-feature-1">Nebbiogeno antintrusione certificato EN 50131-8:2019</li>
+                            <li data-translate="nebbiogeni-feature-2">Avvio rapido (erogazione nebbia in pochi secondi)</li>
+                            <li data-translate="nebbiogeni-feature-3">Protezione volumetrica</li>
+                            <li data-translate="nebbiogeni-feature-4">Fluido atossico e innocuo (certificato e senza residui)</li>
+                            <li data-translate="nebbiogeni-feature-5">Sistemi antimanomissione</li>
+                            <li data-translate="nebbiogeni-feature-6">Collegabile a sistemi di allarme</li>
+                            <li data-translate="nebbiogeni-feature-7">App dedicata per gestione da remoto</li>
+                            <li data-translate="nebbiogeni-feature-8">Batteria backup</li>
+                            <li data-translate="nebbiogeni-feature-9">Modulabile per piccoli/grandi ambienti</li>
+                            <li data-translate="nebbiogeni-feature-10">Ugelli orientabili</li>
+                            <li data-translate="nebbiogeni-feature-11">Installazione semplificata</li>
+                            <li data-translate="nebbiogeni-feature-12">Tecnologia brevettata (caldaia layer, pompa Fog Storm)</li>
+                            <li data-translate="nebbiogeni-feature-13">Supporto pre e post-vendita</li>
                         </ul>
                         <div class="service-cta">
                             <a href="#contatti" class="btn btn-primary" data-translate="btn-quote">Richiedi Preventivo</a>
@@ -331,19 +331,19 @@
                         <h3 data-translate="serramenti-section-title">Serramenti di Sicurezza Blindati</h3>
                         <p class="service-description" data-translate="serramenti-section-desc">Porte blindate e serramenti antieffrazione progettati per offrire la massima protezione. Utilizziamo solo materiali certificati e tecnologie all'avanguardia per garantire sicurezza e durata nel tempo.</p>
                         <ul class="service-features">
-                            <li data-translate="serramenti-feature-1">ANTIEFFRAZIONE fino a Classe 6 (UNI EN 1627-1630)</li>
-                            <li data-translate="serramenti-feature-2">PRODUZIONE INTERNA (ciclo chiuso)</li>
-                            <li data-translate="serramenti-feature-3">PERSONALIZZABILE (su misura, varie classi e modelli)</li>
-                            <li data-translate="serramenti-feature-4">INSTALLAZIONE SENZA OPERE MURARIE</li>
-                            <li data-translate="serramenti-feature-5">CERTIFICAZIONE ISO 9001:2015</li>
-                            <li data-translate="serramenti-feature-6">DESIGN MODERNO (finiture, colori, forme speciali)</li>
-                            <li data-translate="serramenti-feature-7">SERRATURE A CILINDRO EUROPEO O DOPPIA MAPPA</li>
-                            <li data-translate="serramenti-feature-8">SISTEMI BREVETTATI</li>
-                            <li data-translate="serramenti-feature-9">STRUTTURA BLINDATA (acciaio, tubolari rinforzati, piatti antitaglio)</li>
-                            <li data-translate="serramenti-feature-10">ANTI-CORROSIONE (verniciatura a forno e primer)</li>
-                            <li data-translate="serramenti-feature-11">SOPRALLUOGO E CONSULENZA DEDICATA</li>
-                            <li data-translate="serramenti-feature-12">ASSISTENZA TECNICA</li>
-                            <li data-translate="serramenti-feature-13">SUPPORTO POST-VENDITA</li>
+                            <li data-translate="serramenti-feature-1">Antieffrazione fino a Classe 6 (UNI EN 1627-1630)</li>
+                            <li data-translate="serramenti-feature-2">Produzione interna (ciclo chiuso)</li>
+                            <li data-translate="serramenti-feature-3">Personalizzabile (su misura, varie classi e modelli)</li>
+                            <li data-translate="serramenti-feature-4">Installazione senza opere murarie</li>
+                            <li data-translate="serramenti-feature-5">Certificazione ISO 9001:2015</li>
+                            <li data-translate="serramenti-feature-6">Design moderno (finiture, colori, forme speciali)</li>
+                            <li data-translate="serramenti-feature-7">Serrature a cilindro europeo o doppia mappa</li>
+                            <li data-translate="serramenti-feature-8">Sistemi brevettati</li>
+                            <li data-translate="serramenti-feature-9">Struttura blindata (acciaio, tubolari rinforzati, piatti antitaglio)</li>
+                            <li data-translate="serramenti-feature-10">Anti-corrosione (verniciatura a forno e primer)</li>
+                            <li data-translate="serramenti-feature-11">Sopralluogo e consulenza dedicata</li>
+                            <li data-translate="serramenti-feature-12">Assistenza tecnica</li>
+                            <li data-translate="serramenti-feature-13">Supporto post-vendita</li>
                         </ul>
                         <div class="service-cta">
                             <a href="#contatti" class="btn btn-primary" data-translate="btn-quote">Richiedi Preventivo</a>
@@ -404,19 +404,19 @@
                         <h3 data-translate="sorveglianza-section-title">Sistemi di Videosorveglianza Avanzati</h3>
                         <p class="service-description" data-translate="sorveglianza-section-desc">Telecamere IP ad alta definizione, sistemi di registrazione digitale e monitoraggio remoto per una sorveglianza completa 24/7. Soluzioni scalabili per ogni esigenza di sicurezza.</p>
                         <ul class="service-features">
-                            <li data-translate="sorveglianza-feature-1">VIDEOSORVEGLIANZA e VIDEOANALISI INTELLIGENTE</li>
-                            <li data-translate="sorveglianza-feature-2">CONTROLLO REMOTO DA APP E CENTRALE OPERATIVA</li>
-                            <li data-translate="sorveglianza-feature-3">GESTIONE EVENTI CON BLOCKCHAIN</li>
-                            <li data-translate="sorveglianza-feature-4">INTERVENTO RAPIDO e PATTUGLIE ARMATE</li>
-                            <li data-translate="sorveglianza-feature-5">SERVIZIO 24H/365</li>
-                            <li data-translate="sorveglianza-feature-6">ANTIMANOMISSIONE</li>
-                            <li data-translate="sorveglianza-feature-7">ANTIRAPINA/ANTIPANICO</li>
-                            <li data-translate="sorveglianza-feature-8">COLLEGABILE AL 112 (ops. pubbliche)</li>
-                            <li data-translate="sorveglianza-feature-9">TELESOCCORSO</li>
-                            <li data-translate="sorveglianza-feature-10">SISTEMI ANTIJAMMER</li>
-                            <li data-translate="sorveglianza-feature-11">MODULARE su richiesta cliente</li>
-                            <li data-translate="sorveglianza-feature-12">SUPPORTO E ASSISTENZA H24</li>
-                            <li data-translate="sorveglianza-feature-13">CONSULENZA SICUREZZA PERSONALIZZATA</li>
+                            <li data-translate="sorveglianza-feature-1">Videosorveglianza e videoanalisi intelligente</li>
+                            <li data-translate="sorveglianza-feature-2">Controllo remoto da app e centrale operativa</li>
+                            <li data-translate="sorveglianza-feature-3">Gestione eventi con blockchain</li>
+                            <li data-translate="sorveglianza-feature-4">Intervento rapido e pattuglie armate</li>
+                            <li data-translate="sorveglianza-feature-5">Servizio 24h/365</li>
+                            <li data-translate="sorveglianza-feature-6">Antimanomissione</li>
+                            <li data-translate="sorveglianza-feature-7">Antirapina/antipanico</li>
+                            <li data-translate="sorveglianza-feature-8">Collegabile al 112 (ops. pubbliche)</li>
+                            <li data-translate="sorveglianza-feature-9">Telesoccorso</li>
+                            <li data-translate="sorveglianza-feature-10">Sistemi antijammer</li>
+                            <li data-translate="sorveglianza-feature-11">Modulare su richiesta cliente</li>
+                            <li data-translate="sorveglianza-feature-12">Supporto e assistenza h24</li>
+                            <li data-translate="sorveglianza-feature-13">Consulenza sicurezza personalizzata</li>
                         </ul>
                         <div class="service-cta">
                             <a href="#contatti" class="btn btn-primary" data-translate="btn-quote">Richiedi Preventivo</a>
