Implementate ottimizzazioni SEO per social media: Schema Organization sameAs, link social nel footer con UTM tracking, meta tag Open Graph e Twitter Cards verificati

--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -6,7 +6,15 @@
     <title>Termini e Condizioni - FB Total Security</title>
     <meta name="description" content="Termini e condizioni di utilizzo del sito web FB Total Security. Informazioni sui diritti e doveri degli utenti.">
     <meta name="keywords" content="termini condizioni, privacy policy, FB Total Security, sicurezza Milano">
-    <link rel="canonical" href="http://localhost:8000/termini-condizioni.html">
+    <meta name="author" content="FB Total Security">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="IT">
+    <meta name="geo.region" content="IT-25">
+    <meta name="geo.placename" content="Milano">
+    <link rel="canonical" href="https://www.fbtotalsecurity.com/termini-condizioni.html">
+    <link rel="alternate" hreflang="it" href="https://www.fbtotalsecurity.com/termini-condizioni.html?lang=it">
+    <link rel="alternate" hreflang="en" href="https://www.fbtotalsecurity.com/termini-condizioni.html?lang=en">
+    <link rel="alternate" hreflang="x-default" href="https://www.fbtotalsecurity.com/termini-condizioni.html">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
