--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -373,7 +373,12 @@
                         <h4 data-translate="footer-social-title">Seguici su:</h4>
                         <a href="https://www.facebook.com/francosicurezza" rel="nofollow" target="_blank" aria-label="Facebook">📘</a>
                         <a href="https://www.instagram.com/francosicurezza" rel="nofollow" target="_blank" aria-label="Instagram">📷</a>
-                        <a href="https://twitter.com/francosicurezza" rel="nofollow" target="_blank" aria-label="X (Twitter)">🐦</a>
+                        <a href="https://x.com/FBTotalSecurity" aria-label="FB Total Security su X" rel="me noopener" target="_blank">
+                            <svg aria-hidden="true" width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                            </svg>
+                            <span class="sr-only">X (ex Twitter)</span>
+                        </a>
                     </div>
                 </div>
                 <div class="footer-section">
