Ottimizzazioni performance PageSpeed Insights
- Risolto render blocking CSS e Google Fonts con preload asincrono
- Ottimizzate immagini critiche (riduzione 76-98% dimensioni)
- Ridotto layout thrashing con requestAnimationFrame e cache DOM
- Migliorata cache con headers aggressivi (1 anno risorse statiche)
- Aggiornata CSP per Google Analytics GA4
- Implementati attributi width/height per prevenire layout shift

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -342,13 +342,16 @@
                     <h3 data-translate="form-title">Richiedi Informazioni</h3>
                     <form>
                         <div class="form-group">
+                            <label for="nome" data-translate="form-name-label" class="sr-only">Nome e Cognome</label>
                             <input type="text" id="nome" name="nome" autocomplete="name" data-translate-placeholder="form-name-placeholder" placeholder="Nome e Cognome" required>
                         </div>
                         <div class="form-group">
+                            <label for="email" data-translate="form-email-label" class="sr-only">Email</label>
                             <input type="email" id="email" name="email" autocomplete="email" data-translate-placeholder="form-email-placeholder" placeholder="Email" required>
                         </div>
 
                         <div class="form-group">
+                            <label for="servizio" data-translate="form-service-label" class="sr-only">Servizio di interesse</label>
                             <select id="servizio" name="servizio">
                                 <option value="" data-translate="form-service-default">Seleziona il servizio di interesse</option>
                                 <option value="nebbiogeni" data-translate="form-service-nebbiogeni">Sistemi Nebbiogeni</option>
@@ -359,6 +362,7 @@
                             </select>
                         </div>
                         <div class="form-group">
+                            <label for="messaggio" data-translate="form-message-label" class="sr-only">Messaggio</label>
                             <textarea id="messaggio" name="messaggio" data-translate-placeholder="form-message-placeholder" placeholder="Descrivi le tue esigenze di sicurezza" rows="4"></textarea>
                         </div>
                         <div class="form-group checkbox-group">
@@ -381,8 +385,8 @@
                     <p data-translate="footer-company-desc">Creatori di sicurezza specializzati in sistemi di protezione avanzati. La tua sicurezza è la nostra priorità.</p>
                     <div class="social-links">
                         <h4 data-translate="footer-social-title">Seguici su:</h4>
-                        <a href="https://www.facebook.com/francosicurezza" rel="nofollow" target="_blank" aria-label="Facebook">📘</a>
-                        <a href="https://www.instagram.com/francosicurezza" rel="nofollow" target="_blank" aria-label="Instagram">📷</a>
+                        <a href="https://www.facebook.com/francosicurezza" rel="follow" target="_blank" aria-label="Facebook">📘</a>
+                <a href="https://www.instagram.com/francosicurezza" rel="follow" target="_blank" aria-label="Instagram">📷</a>
                         <a href="https://x.com/FBTotalSecurity" aria-label="FB Total Security su X" rel="me noopener" target="_blank">
                             <svg aria-hidden="true" width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
