Ottimizza prestazioni CLS: preload font asincrono, riduce forced reflow in JS, stabilizza layout hero-container

--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -79,11 +79,12 @@
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
     <link rel="prefetch" href="index.html">
     <link rel="prefetch" href="serramenti.html">
     <link rel="prefetch" href="sorveglianza.html">
     <link rel="prefetch" href="allarmi.html">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Preload Critical Images for LCP -->
     <link rel="preload" href="icons/logo_sito_franco.webp" as="image" fetchpriority="high">
