--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -90,7 +90,8 @@
     <link rel="prefetch" href="nebbiogeni.html">
     <link rel="prefetch" href="serramenti.html">
     <link rel="prefetch" href="allarmi.html">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
     
     <!-- Preload Critical Images for LCP -->
     <link rel="preload" href="icons/logo_sito_franco.webp" as="image" fetchpriority="high">
