--- a/test-buttons.html
+++ b/test-buttons.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container" style="padding: 2rem; background: #000;">
-        <h1 style="color: white; text-align: center;">Test Bottoni Service-Link</h1>
+        <h1 class="test-title">Test Bottoni Service-Link</h1>
         
         <div class="services-grid">
             <div class="service-card">
